Fix: add small padding so search results don't
overlap the checkboxes

--- a/src/components/SearchPanel/SearchPanel.scss
+++ b/src/components/SearchPanel/SearchPanel.scss
@@ -8,7 +8,7 @@
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    margin-top: 80px !important;
+    margin-top: 110px !important;
   }
 
   .loader-wrapper {
